--- a/gameserver/.project
+++ b/gameserver/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aCis_gameserver_350</name>
+	<name>gameserver</name>
 	<comment></comment>
 	<projects>
 	</projects>
