--- a/gameserver/.classpath
+++ b/gameserver/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="**/.svn/*|.svn" kind="src" path="java"/>
-	<classpathentry kind="lib" path="lib/c3p0-0.9.5-pre5.jar"/>
-	<classpathentry kind="lib" path="lib/mchange-commons-java-0.2.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.26.jar"/>
-	<classpathentry kind="lib" path="lib/nproperty.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="lib" path="D:/Lineage2/ServerSourceHg/gameserver/lib/c3p0-0.9.5-pre5.jar"/>
+	<classpathentry kind="lib" path="D:/Lineage2/ServerSourceHg/gameserver/lib/mchange-commons-java-0.2.6.2.jar"/>
+	<classpathentry kind="lib" path="D:/Lineage2/ServerSourceHg/gameserver/lib/mysql-connector-java-5.1.26.jar"/>
+	<classpathentry kind="lib" path="D:/Lineage2/ServerSourceHg/gameserver/lib/nproperty.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
