--- a/gameserver/.settings/org.eclipse.buildship.core.prefs
+++ b/gameserver/.settings/org.eclipse.buildship.core.prefs
@@ -1,15 +1,10 @@
-#Fri Aug 18 02:35:11 EEST 2017
-override.workspace.settings=true
+#Sat Nov 25 21:21:06 EET 2017
 connection.arguments=
 connection.jvm.arguments=
 build.commands=org.eclipse.jdt.core.javabuilder
 connection.project.dir=
-gradle.user.home=
 natures=org.eclipse.jdt.core.javanature
-offline.mode=false
-build.scans.enabled=false
 eclipse.preferences.version=1
 connection.java.home=null
 derived.resources=.gradle,build
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 project.path=\:
